tests/baselines/reference/symbolProperty24.errors.txt
tests/cases/conformance/es6/Symbols/symbolProperty24.ts(5,7): error TS2420: Class 'C' incorrectly implements interface 'I'.
  Types of property '[Symbol.toPrimitive]' are incompatible.
    Type '() => string' is not assignable to type '() => boolean'.
      Type 'string' is not assignable to type 'boolean'.


==== tests/cases/conformance/es6/Symbols/symbolProperty24.ts (1 errors) ====
    interface I {
        [Symbol.toPrimitive]: () => boolean;
    }
    
    class C implements I {
          ~
!!! error TS2420: Class 'C' incorrectly implements interface 'I'.
!!! error TS2420:   Types of property '[Symbol.toPrimitive]' are incompatible.
!!! error TS2420:     Type '() => string' is not assignable to type '() => boolean'.
!!! error TS2420:       Type 'string' is not assignable to type 'boolean'.
        [Symbol.toPrimitive]() {
            return "";
        }
    }